css/terminal.css
@font-face {
    src: url(/css/0_Jetbrains\ Mono.ttf);
    font-family: "Jetbrains Mono";
}

body,
#userInput {
    font-family: "Jetbrains Mono";
    color: rgb(0, 255, 0);
    font-size: 20px;
    background-color: black;
}

body {
    margin: 0;
    height: 100dvh;
    font-variant-ligatures: none;
}

#wrapper {
    margin: 0px 0px 25px 20px;
    padding-top: 25px;
}

#history {
    color: green;
}

header {
    margin-bottom: 20px;
}

#userInputDiv {
    position: relative;
    display: flex;
    align-items: center;
    width: 50%;
}

#userInput {
    height: 30px;
    width: 100%;
    border: none;
    caret-color: transparent;
}

#wrapperInput {
    display: flex;
}

.historyLine {
    height: 30px;
}

#userInputDiv,
#wrapperInput,
.historyLine {
    margin-left: 10px;
}

#answerDiv {
    margin: 10px;
}

#answerPrefix {
    padding-left: 10px;
}

.answerLine{
    margin-bottom: 6px;
    margin-left: 35px;
}

#options {
    margin-left: 30px;
}

#msgHelp {
    color: rgb(131, 23, 131);
}

#caret {
    position: absolute;
    font-family: "Jetbrains Mono";
    color: rgb(0, 255, 0);
    font-size: 22px;
    pointer-events: none;
    animation: blink 1s step-end infinite;
    display: none;
}

@media all and (max-width: 700px) {
    body, #userInput {
        font-size: 17px;
    }
    .answerLine{
        margin-left: 30px;
    }
}

@keyframes blink {
    50% {
        opacity: 0;
    }
}

input:focus {
    outline: none;
}

